--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.2"
   },
